--- a/pytest.ini
+++ b/pytest.ini
@@ -12,10 +12,13 @@ addopts =
     --cov-report=term-missing
     --cov-report=html:htmlcov
     --cov-fail-under=80
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = session
 markers =
     unit: Unit tests
     integration: Integration tests
     slow: Slow running tests
+    asyncio: Async tests
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
