--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ langchain-google-genai>=2.0.0
 langgraph>=0.2.0
 
 # Trustcall for memory extraction
-trustcall>=0.1.0
+trustcall>=0.0.39
 
 # Environment and configuration
 python-dotenv>=1.0.0
@@ -18,6 +18,12 @@ pytest>=7.0.0
 pytest-cov>=4.0.0
 pytest-mock>=3.10.0
 pytest-asyncio>=0.21.0
+
+# FastAPI dependencies
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+websockets>=12.0
 
 # Development
 black>=23.0.0
